test/files/neg/cyclics-import.check
cyclics-import.scala:1: error: encountered unrecoverable cycle resolving import.
Note: this is often due in part to a class depending on a definition nested within its companion.
If applicable, you may wish to try moving some members into another object.
import User.UserStatus._
            ^
one error found
